[package]
name = "stegano-ants"
version = "0.1.0"
authors = ["Grzegorz Kazana <kazana.grzegorz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.0"
itertools = "0.10.0"
cfg-if = "1.0.0"
rayon = "1.5.0"
bmp = "0.5.0"
clap = "3.0.0-beta.2"

flame = { version = "0.2.2", optional = true }
flamer = { version = "0.3", optional = true }

[dev-dependencies]
proptest = "0.10.1"

[features]
default = []
# run by `cargo run --release --features profiler`
profiler = ["flame", "flamer"]
# cargo run --release --features "profiler singlethread"
singlethread = []
