[package]
name = "stegano-ants"
version = "0.1.2"
authors = ["Grzegorz Kazana <kazana.grzegorz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.0"
itertools = "0.10.0"
cfg-if = "1.0.0"
rayon = "1.5.0"
image = "0.23.13"
clap = "3.0.0-beta.2"

flame = { version = "0.2.2", optional = true }
flamer = { version = "0.3", optional = true }

[dev-dependencies]
proptest = "0.10.1"

[features]
default = []
# run by `cargo run --release --features profiler`
profiler = ["flame", "flamer"]
# cargo run --release --features "profiler singlethread"
singlethread = []


# http://sipi.usc.edu/database/database.php?volume=misc&image=10#top
# find assets | grep \.tiff | sed -e 's/.tiff//g' | sed -e 's:assets/images/::g' | xargs -I '{}' mkdir -p 'assets/images/{}'
# find assets | grep \.tiff | sed -e 's/.tiff//g' | sed -e 's:assets/images/::g' | xargs -I '{}' convert 'assets/images/{}.tiff' 'assets/images/{}/{}.bmp'
# find assets/images/*/* | sed -e 's:.bmp::g' | xargs -I '{}' convert '{}.bmp' -resize 200x200 '{}-l.bmp'